--- a/index.html
+++ b/index.html
@@ -22,15 +22,16 @@
         td {
             width: 95px;
             height: 95px;
-            background-color: #00ff33;
+            /*background-color: #00ff33;*/
+            background-color: #ffbf00;
             position: relative;
         }
 
         .img {
             position: absolute;
             z-index: 1;
-            top: 0;
-            left: 0;
+            top: 10px;
+            left: 5px;
         }
 
         .tex {
@@ -39,6 +40,7 @@
             color: black;
             font-size: 15px;
             font-weight: bold;
+            top: 24px;
         }
     </style>
     <script>
@@ -54,22 +56,22 @@
                 timeId = null;         //指定setTimeout()的变量
 
         var images = [ 
-            "img/mouse.png",
-            "img/mouse.png",
-            "img/mouse.png",
-            "img/mouse.png",
-            "img/mouse.png",
-            "img/mouse.png",
-            "img/mouse.png",
-            "img/mouse.png",
-            "img/mouse.png",
-            "img/mouse.png",
-            "img/mouse.png",
-            "img/mouse.png",
-            "img/mouse.png",
-            "img/mouse.png",
-            "img/mouse.png",
-            "img/mouse.png",
+            "img/二姑.png",
+            "img/千代.png",
+            "img/呜喵.png",
+            "img/小翠.png",
+            "img/屎蛋.png",
+            "img/延迟.png",
+            "img/彼岸.png",
+            "img/收割.png",
+            "img/烟灰.png",
+            "img/烽火.png",
+            "img/熊猫.png",
+            "img/猫团子.png",
+            "img/珞风.png",
+            "img/理想.png",
+            "img/ROLL.png",
+            "img/酒店兔.png",
         ];
 
         //游戏结束
@@ -77,7 +79,7 @@
             timeStop();
             playing = false;
             clearMouse();
-            alert("游戏结束！\n你获得的分数为：" + score + "\n命中率为：" + success);
+            alert("游戏结束！\n你获得的分数为：" + score + "\n命中率为：" + Math.round(success * 100) + "%");
             success = 0;
             score = 0;
             knock = 0;
